--- a/public/styles.css
+++ b/public/styles.css
@@ -32,7 +32,7 @@ body {
   margin-left: 150px;
 
 }
-.searchbar {
+.searchbar, .addMovieBar {
   margin-left: 150px;
   margin-bottom: 25px;
   background-color: lavender;
